fixes selection process, added lazy loading, fix hero section subtitle font-size and spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
   .pratibha-subheading {
     font-family: "Poppins" ,serif;
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 32px;
     line-height: 100%;  
     letter-spacing: 0%;
     color: #1E1E1E;
